syntax = "proto3";

import "google/protobuf/empty.proto";
import "./auth/entry.proto";

package auth_service;

service AuthService {
    // Auth methods
    rpc RequestMessage(google.protobuf.Empty) returns (RequestMessageResponse);
    rpc GenerateTestSignature(GenerateTestSignatureRequest) returns (GenerateTestSignatureResponse);
    rpc VerifySignature(VerifySignatureRequest) returns (VerifySignatureResponse);
}